--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
-<html>
-    <head>
-        <title>hello coursera</title>
-    <head>
-    <body>
-       <h1 style  "color:red">hello boss<h1>
-
-    </body>
-</html>
+  <!DOCTYPE html>
+  <html>
+  <head>
+  	<title>hello coursera</title>
+  </head>
+  <body>
+      <h1 style "color : red">hello boss<h1>
+  </body>
+  </html>
