my  modified page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
   	<title>hello coursera</title>
   </head>
   <body>
-      <h1 style "color : red">hello boss<h1>
+      <h1>hello boss,how are you<h1>
   </body>
   </html>
